[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=1]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_left = -0.000976563
anchor_right = 1.00391
anchor_bottom = 1.02667
color = Color( 0.180392, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.18902
anchor_top = 0.239449
anchor_right = 0.81098
anchor_bottom = 0.760551
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CreateFileButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 118.0
margin_right = 639.0
margin_bottom = 138.0
text = "Create New Palette File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Background/VBoxContainer"]
margin_top = 142.0
margin_right = 639.0
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditCurrentFileButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 150.0
margin_right = 639.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 177, 37.5 )
text = "Edit Current Palette File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Background/VBoxContainer"]
margin_top = 174.0
margin_right = 639.0
margin_bottom = 178.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportFileButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 182.0
margin_right = 639.0
margin_bottom = 202.0
text = "Import Palette File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 192.0
margin_top = 83.0
margin_right = 835.0
margin_bottom = 483.0
window_title = "Open a File"
mode = 0
access = 2
show_hidden_files = true
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/VBoxContainer/CreateFileButton" to="." method="_on_CreateFileButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/EditCurrentFileButton" to="." method="_on_EditCurrentFileButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/ImportFileButton" to="." method="_on_ImportFileButton_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
